<resources>
    <string name="app_name">Book Listing</string>
    <string name="thumbnail">Book Thumbnail</string>
    <string name="search_hint">Search…</string>
    <string name="search_button">Search</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="loading">Loading…</string>
    <string name="searching_hint">Search some books using the above search bar!</string>
    <string name="clear_history">Clear History</string>
    <string name="no_books_found">No books found. Try searching something else.</string>
    <string name="settings">Search Settings</string>
    <string name="title_activity_settings">Search Settings</string>
    <string name="book_detail">Book Detail</string>
    <string name="SAMPLE">https://www.googleapis.com/books/v1/volumes?q=</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="results">Results Per Page</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_previous_page">Go To Previous Page</string>
    <string name="go_to_next_page">Go To Next Page</string>
    <string name="book_description">Book Description</string>
    <string name="buy_link_here">Buy link here</string>
    <string name="buy">Buy</string>
    <string name="not_for_sale">NOT FOR SALE</string>
    <string name="not_available">Not Available</string>
    <string name="no_description">No description Available</string>
    <string name="published_in">Published in</string>
    <string name="page_count">Page count:</string>

</resources>