<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/searching_hint"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:paddingBottom="100dp"
        android:clipToPadding="false"
        android:orientation="vertical" />
    <FrameLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/page_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"

            android:layout_margin="16dp"
            app:fabSize="mini"
            android:src="@drawable/ic_baseline_navigate_next_24"
            android:contentDescription="@string/go_to_next_page">
        </com.google.android.material.floatingactionbutton.FloatingActionButton>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/page_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="start"
            app:fabSize="mini"
            android:src="@drawable/ic_baseline_navigate_before_24"
            android:contentDescription="@string/go_to_previous_page">
        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </FrameLayout>



</FrameLayout>